<resources>
    <string name="app_name">HCI Paint App</string>
    <string name="textview">TextView</string>
    <string name="hello_world">Hello world</string>
    <string name="edit_message">Enter A Message</string>
    <string name="button_text">Push Me</string>
    <string name="closebuttontest">CloseButtonTest</string>
    <string name="sharecontentimage">ShareContentImage</string>
    <string name="WeirdPinkBlob">Weird Pink Blob Image</string>
    <string name="ColorB">Color</string>
    <string name="FillSwitch">Fill</string>
    <string name="ClearMsg">Clear</string>
    <string name="toggle_line">Line</string>
    <string name="toggle_curve">Curve</string>
    <string name="toggle_rect">Rect</string>
    <string name="toggle_oval">Oval</string>
    <string name="size_prompt">Choose a size</string>
    <string-array name="size_arrays">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>12</item>
        <item>18</item>
    </string-array>
</resources>
